[package]
name = "diesel_enum_derive"
version = "0.1.0"
authors = ["Natalie Jameson <natalie@natalie.wtf>"] 
edition = "2021"
description = "Creates a representation of an enum in the database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.101"
quote = "1.0.40"
proc-macro2 = "1.0.95"
convert_case = "0.8.0"
darling = "0.20.11"

[lib]
proc-macro = true
